# rust-todo-app

./: .env.example  Cargo.toml  diesel.toml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2020-10-19-110031_create_users/: down.sql  up.sql
migrations/2020-10-19-110526_create_todos/: down.sql  up.sql
migrations/2020-10-19-110635_create_relation_users_todos/: up.sql
sql/: user_with_todos.sql
src/: db.rs  main.rs  schema.rs  virtual_schema.rs
src/application/: mod.rs
src/crons/: mod.rs
src/middleware/: auth.rs
src/models/: auth.rs  mod.rs  todo.rs  user.rs
src/routes/: auth.rs  mod.rs
src/routes/auth/: login.rs  register.rs
src/routes/todos/: check.rs  index.rs  mod.rs  store.rs  uncheck.rs
src/routes/users/: index.rs
src/services/: jwt.rs
src/state/: app.rs  pool.rs
src/validation/: mod.rs  new_todo_request.rs  new_user_request.rs
