[package]
name = "todo_app"
version = "0.1.0"
authors = ["Tibor Hudik <tibor@barrage.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
uuid = { version = "*", features = ["serde", "v4"] }
bcrypt = "*"
failure = "*"
actix = "*"
actix-web = "*"
actix-service = "*"
actix-cors = "*"
serde = "*"
derive_more = "*"
env_logger = "*"
futures = "*"
futures-util = "*"
jsonwebtoken = "*"
rand = "*"
chrono = "*"
deadpool-postgres = "*"
base64 = "*"
r2d2 = "*"
r2d2-diesel = "*"
