[package]
name = "todo_app"
version = "0.1.0"
authors = ["Tibor Hudik <tibor@barrage.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
bcrypt = "0.9.0"
failure = "0.1.8"
actix = "0.10.0"
actix-web = "3.3.2"
actix-http = "2.2.0"
actix-service = "1.0.6"
actix-cors = "0.5.3"
serde = "1.0.118"
serde_json = "1.0.60"
env_logger = "0.8.2"
futures = "0.3.8"
futures-util = "0.3.8"
jsonwebtoken = "7.2.0"
rand = "0.7.3"
chrono = "0.4.19"
base64 = "0.12.3"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
actix-web-validator = "2.0.1"
validator = { version = "0.11", features = ["derive"] }
crony = "0.1.0"
